tests/datakinds/should_compile/DataKind5.hs
{-# LANGUAGE DataKinds #-}
{-# LANGUAGE KindSignatures #-}

module DataKind5 where

data kind KA = TA KA
