tests/datakinds/should_fail/FailDataKind6.hs
{-# LANGUAGE DataKinds #-}

module FailDataKind6 where

data kind K = K

data kind A
data kind B = A
